[gd_scene load_steps=2 format=3 uid="uid://u06gistahwqp"]

[ext_resource type="Script" uid="uid://qdwsmqggf6a3" path="res://UserInterface/Components/Audio/audio_slider_component.gd" id="1_tu23d"]

[node name="AudioSliderComponent" type="HSlider"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.025
offset_bottom = -0.200001
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.5
step = 0.01
value = 1.0
script = ExtResource("1_tu23d")

[connection signal="drag_ended" from="." to="." method="_on_drag_ended"]
[connection signal="value_changed" from="." to="." method="_on_value_changed"]
